# chip8emulator

./: CMakeCache.txt  CMakeLists.txt  Makefile  chip8  cmake_install.cmake
Source/: CMakeLists.txt  Chip8.cpp  Chip8.hpp  Chip8instruct.cpp  Main.cpp  Makefile  Platform.cpp  Platform.hpp  cmake_install.cmake
